--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,118 +1,106 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
 
-    <title>People</title>
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.min.js"
-      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-      crossorigin="anonymous"
-    ></script>
-    <script type="text/javascript" src="./web3.min.js"></script>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-      crossorigin="anonymous"
-    ></script>
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"
-    />
+  <title>People</title>
+  <script type="text/javascript" src="./web3.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
-    <style>
-      .loader {
-        align-items: center;
-        background-color: rgba(1, 1, 1, 0.85);
-        border-radius: 6px;
-        color: white;
-        display: flex;
-        font-size: large;
-        height: 50%;
-        justify-content: center;
-        text-align: center;
-        width: 50%;
-      }
 
-      .page-body {
-        position: relative;
-      }
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+  </script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
 
-      .wrapper {
-        align-items: center;
-        background-color: rgba(1, 1, 1, 0.25);
-        display: flex;
-        height: 100%;
-        justify-content: center;
-        position: fixed;
-        width: 100%;
-        z-index: 10;
-      }
-    </style>
-  </head>
+  <style>
+    .loader {
+      align-items: center;
+      background-color: rgba(1, 1, 1, 0.85);
+      border-radius: 6px;
+      color: white;
+      display: flex;
+      font-size: large;
+      height: 50%;
+      justify-content: center;
+      text-align: center;
+      width: 50%;
+    }
 
-  <body>
-    <div class="wrapper" id="savings-wrapper">
-      <div class="loader">
-        committing transaction;
-      </div>
+    .page-body {
+      position: relative;
+    }
+
+    .wrapper {
+      align-items: center;
+      background-color: rgba(1, 1, 1, 0.25);
+      display: flex;
+      height: 100%;
+      justify-content: center;
+      position: fixed;
+      width: 100%;
+      z-index: 10;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="wrapper" id="savings-wrapper">
+    <div class="loader">
+      committing transaction
     </div>
-    <div class="wrapper" id="wrapper">
-      <div class="loader">
-        loading;
-      </div>
+  </div>
+  <div class="wrapper" id="wrapper">
+    <div class="loader">
+      loading
     </div>
-    <div class="jumbotron jumbotron-fluid page-body">
-      <div class="container">
-        <h1 class="display-4">CoinFlip Dapp</h1>
-        <p class="lead">FLIP a coin, win big!!!</p>
-      </div>
-    </div>
+  </div>
+  <div class="jumbotron jumbotron-fluid page-body">
     <div class="container">
-      <div style="position: relative;">
-        <h2>Heads or Tails?</h2>
+      <h1 class="display-4">CoinFlip Dapp</h1>
+      <p class="lead">FLIP a coin, win big!!!</p>
+    </div>
+  </div>
+  <div class="container">
+    <div style="position: relative;">
+      <h2>Heads or Tails?</h2>
 
-        <div class="input-group mb-3">
-          <input
-            type="text"
-            class="form-control"
-            id="bet_amount"
-            type="text"
-            text="100"
-          />
-        </div>
-        <div class="input-group mb-3">
-          <select class="form-control" id="bet_denomination">
-            <option value="wei">wei</option>
-            <option value="ether">ether</option>
-          </select>
-        </div>
+      <div class="input-group mb-3">
+        <input type="text" class="form-control" id="bet_amount" type="text" text="100" />
+      </div>
+      <div class="input-group mb-3">
+        <select class="form-control" id="bet_denomination">
+          <option value="wei">wei</option>
+          <option value="ether">ether</option>
+        </select>
+      </div>
+      <div class="input-group mb-3">
+        <button type="button" id="reset" class="btn btn-danger mr-4">
+          Reset
+        </button>
+      </div>
 
-        <div
-          class="d-flex flex-column align-items-center justify-content-center mt-5"
-        >
-          <div>Result</div>
-          <div id="result"></div>
-        </div>
-        <div class="d-flex justify-content-center mt-5">
-          <button type="button" id="heads_button" class="btn btn-primary mr-4">
-            Heads
-          </button>
-          <button type="button" id="tails_button" class="btn btn-primary">
-            Tails
-          </button>
-        </div>
+      <div class="d-flex flex-column align-items-center justify-content-center mt-5">
+        <div>Result</div>
+        <div id="result"></div>
+      </div>
+      <div class="d-flex justify-content-center mt-5">
+        <button type="button" id="heads_button" class="btn btn-primary mr-4">
+          Heads
+        </button>
+        <button type="button" id="tails_button" class="btn btn-primary">
+          Tails
+        </button>
       </div>
     </div>
+  </div>
 
-    <script type="text/javascript" src="./abi.js"></script>
-    <script type="text/javascript" src="./main.js"></script>
-  </body>
+  <script type="text/javascript" src="./abi.js"></script>
+  <script type="text/javascript" src="./main.js"></script>
+</body>
+
 </html>
